2007-09-20 18:33:33  Tim Janik  <timj@gtk.org>

	* Makefile.am (dist-hook): fix po/POTFILES.in to exclude non-distributed po files.

Thu Sep 20 16:09:23 2007  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/audio/Makefile.am: Added a missing file to EXTRA_DIST - beasts
	make distcheck succeeds here now (with po directory alsa patch).

2007-09-18 02:50:22  Tim Janik  <timj@gtk.org>

	* updated version to 0.7.2-rc1, interface age 0, binary age 0.

2007-09-18 02:27:58  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstmenus.h:
	* beast-gtk/bstprocedure.h:
	* beast-gtk/bstutils.h:
	* beast-gtk/gxk/gxkutils.h:
	* tools/sfiutils.h: added G_GNUC_NULL_TERMINATED to function ellipsis,
	patch by Stefan Westerfeld from bug #344388.

2007-09-18 00:53:28  Tim Janik  <timj@gtk.org>

	* library/instruments/kf-synth-string-sweep.bse: added small comment.

2007-09-18 00:38:43  Tim Janik  <timj@gtk.org>

	* library/instruments/kf-synth-string-sweep.bse: added synth string
	instrument by Krzysztof Foltman.

Tue Sep 18 00:02:32 2007  Stefan Westerfeld  <stefan@space.twc.de>

	* library/scripts/mixer-splitup-by-track.scm: Display error message in
	the case that somebody tries to run the script while the project is
	playing (instead of messing up things silently).

Sat Aug 25 03:18:50 2007  Tim Janik  <timj@gtk.org>

	* fixed $Date parsing, allow to extract dates from git.

Fri Aug 24 20:04:12 2007  Stefan Westerfeld  <stefan@space.twc.de>

	* tools/bsewavetool.cc: Replaced guint64 variables by uint64
	variables, to avoid "%lld" compiler warnings on AMD64.

Thu Aug 23 15:17:57 2007  Stefan Westerfeld  <stefan@space.twc.de>

	* tools/bsewavetool.cc: Replaced global -k option by --skip-errors,
	global -q option by --silent and oggenc -Q <n> by oggenc -q <n>. The
	idea behind the switch is to avoid global short options where possible
	to minimize collisions with command options now and in the future.
	Fixes #468229.

Sat Aug 18 00:18:16 2007  Stefan Westerfeld  <stefan@space.twc.de>
